--- a/style.css
+++ b/style.css
@@ -32,23 +32,23 @@ html {
 
 .card header,
 footer {
-    height: 5em;
+    height: 3em;
+    padding: 1em;
 }
 
 .card header h2 {
     font-size: 2em;
-    line-height: 2.5;
+    line-height: 1.5;
 }
 
 .card header h2,
 footer p {
     margin: 0;
-    padding-left: 1em;
 }
 
 .card footer p {
     font-size: 1.5em;
-    line-height: 2.5;
+    line-height: 2;
 }
 
 .card article {
